# shunyaface

./: 060633bd.0e1c890d.js  060633bd.e29cdb28.js  0983b074.27a96e79.js  0983b074.add8446f.js  0983b074.b0eff253.js  0983b074.ce2b523e.js  0983b074.dbc3997b.js  0d531224.0d506fa5.js  0d531224.d259ea9e.js  0d531224.dff51b68.js  1.6ab5dfab.js  17896441.8cd83f72.js  17896441.dba53da9.js  1936fe39.060e35ff.js  1936fe39.0e05ca1e.js  1936fe39.9c3e9153.js  1951b7df.54667251.js  1951b7df.5c6f5330.js  1951b7df.971add48.js  2.20925f15.js  2.597161c6.js  2051d327.06c59c94.js  2051d327.1e086b56.js  2051d327.2024e870.js  20ac7829.88cf8f13.js  2ee8e562.a73a079f.js  33.c51c20cf.js  34.4486b3d9.js  34.f08e29c7.js  35.c7ab25f2.js  3d5d5cc3.78564032.js  3d5d5cc3.932b484a.js  3d5d5cc3.f98ccba0.js  404.html  4a8288b4.2a624429.js  4a8288b4.76c7cead.js  4a8288b4.76f2973d.js  508ae5fc.68781b70.js  508ae5fc.b1625c4e.js  5a8ac0bb.596d19ab.js  (+69 more)
blog/: atom.xml  feed.xml  index.html
css/: main.css
docs/: doc2.html  doc3.html  doc4.html  doc5.html
docs/doc1/: index.html
docs/doc2/: index.html
docs/doc3/: index.html
docs/doc4/: index.html
docs/doc5/: index.html
docs/guides/: blink.html  home.html  installation.html
docs/quick-start/: 01-intro.html  03-define.html  04-design.html  05-burn-os.html  06-connect.html  demo.html  (+1 more)
en/: help.html  index.html  users.html
examples/example-facerec/: CMakeLists.txt  README.md  voice_output.sh
examples/example-facerec/src/: facerec-test.cpp
help/: index.html
users/: index.html
website/: docusaurus.config.js  package.json  sidebars.js
(+125 files in other folders)
